<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:fitsSystemWindows="true">

    <TextView
        style="@style/Header40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/offer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.touchin.prosto.view.StartButton
        android:id="@+id/offer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_min="196dp"
        app:layout_constraintBottom_toTopOf="@+id/support_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/common_offers"
        app:src="@drawable/ic_offer" />

    <com.touchin.prosto.view.StartButton
        android:id="@+id/support_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_min="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:text="@string/common_support"
        app:src="@drawable/ic_support" />
    
    <ImageButton
        android:id="@+id/night_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/padding_main"
        android:background="@drawable/bg_oval"
        android:src="@drawable/ic_mode_dark"
        android:elevation="@dimen/elevation_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        app:drawableStartCompat="@drawable/touchin_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textStyle="bold"
        style="@style/Header24"
        android:text="@string/touch_instinct"/>


</androidx.constraintlayout.widget.ConstraintLayout>
