<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:clickable="true">

    <com.anadolstudio.core.view.toolbar.BaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:title="@string/common_support"
        android:elevation="4dp"
        app:back_icon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/common_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/Caption16"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Email" />

    <EditText
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/common_subject"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/Caption16"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Тема" />

    <com.touchin.prosto.view.BaseButton
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_base_button"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:text="@string/common_send"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/textPism"
        android:layout_width="376dp"
        android:layout_height="115dp"
        android:layout_marginTop="132dp"
        android:background="@color/disableForeground"
        android:gravity="top"
        android:hint="@string/common_textPisma"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>
