<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/padding_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.anadolstudio.core.view.toolbar.BaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:title="@string/common_offers"
        android:elevation="4dp"
        app:tint="@color/colorAccent"
        app:back_icon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.anadolstudio.core.view.toolbar.ToolbarIconButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:src="@drawable/ic_favorite_checked" />

    </com.anadolstudio.core.view.toolbar.BaseToolbar>

    <include
        android:id="@+id/skeletons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        layout="@layout/layout_offers_recycler_skeleton" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_error"
            style="@style/Caption14"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_repeat"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="17dp"
            android:background="@drawable/bg_error_button"
            android:foreground="@drawable/item_ripple_rectangle_8"
            style="@style/Caption14"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
